--- a/1st page.html
+++ b/1st page.html
@@ -108,7 +108,7 @@
                             <img src="https://thumbs.dreamstime.com/b/woman-coughing-vector-cartoon-coronavirus-illustration-178363042.jpg"
                                 class="card-img-top" style="height: 200px" alt="Img not found">
                             <div class="card-body">
-                                <p class="card-text"><a href="file:///C:/Users/Lenovo/Desktop/bootstrap/covid/2nd%20page.html">Symptoms</a></p>
+                                <p class="card-text"><a target="blank" href="file:///C:/Users/Lenovo/Desktop/bootstrap/covid/2nd%20page.html">Symptoms</a></p>
                             </div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                             <img src="https://media.istockphoto.com/vectors/two-men-going-to-shake-the-hands-recommendation-for-preventing-vector-id1212053129"
                                 class="card-img-top" style="height: 200px" alt="Image not found">
                             <div class="card-body">
-                                <p class="card-text"><a href="file:///C:/Users/Lenovo/Desktop/bootstrap/covid/2nd%20page.html">Spread</a></p>
+                                <p class="card-text"><a target="blank" href="file:///C:/Users/Lenovo/Desktop/bootstrap/covid/2nd%20page.html">Spread</a></p>
                             </div>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                             <img src="https://image.freepik.com/free-vector/working-from-home-stay-home-stay-safe-social-distancing_134553-287.jpg"
                                 class="card-img-top" style="height: 200px" alt="Image not found">
                             <div class="card-body">
-                                <p class="card-text"><a href="file:///C:/Users/Lenovo/Desktop/bootstrap/covid/2nd%20page.html">Prevention</a></p>
+                                <p class="card-text"><a target="blank" href="file:///C:/Users/Lenovo/Desktop/bootstrap/covid/2nd%20page.html">Prevention</a></p>
                             </div>
                         </div>
                     </div>
